# stm32-cmake-chibios-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  demo.rs  hack.cpp  main.c  openocd_flash.cfg  thumbv7em-none-eabi.json
ChibiOS/demos/AVR/RT-ARDUINOMEGA/: main.c
ChibiOS/demos/KINETIS/RT-FREEDOM-K20D50M/: main.c
ChibiOS/demos/KINETIS/RT-FREEDOM-KL25Z/: main.c
ChibiOS/demos/KINETIS/RT-TEENSY3/: main.c
ChibiOS/demos/LPC21xx/RT-LPC214x-OLIMEX/: main.c
ChibiOS/demos/SPC5/RT-SPC564A-EVB/: main.c
ChibiOS/demos/SPC5/RT-SPC56EC-EVB/: main.c
ChibiOS/demos/SPC5/RT-SPC56EL-EVB/: main.c
ChibiOS/demos/STM32/RT-STM32F031K6-NUCLEO32/: main.c
ChibiOS/demos/STM32/RT-STM32F051-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F072-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F072RB-NUCLEO/: main.c
ChibiOS/demos/STM32/RT-STM32F100-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F103-MAPLEMINI/: main.c
ChibiOS/demos/STM32/RT-STM32F103-OLIMEX_STM32_P103/: main.c
ChibiOS/demos/STM32/RT-STM32F103-STM3210E_EVAL-FATFS-USB/: main.c
ChibiOS/demos/STM32/RT-STM32F103RB-NUCLEO/: main.c
ChibiOS/demos/STM32/RT-STM32F103_INEMO_DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F107-OLIMEX_P107-LWIP/: main.c
ChibiOS/demos/STM32/RT-STM32F207-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F302R8-NUCLEO/: main.c
ChibiOS/demos/STM32/RT-STM32F303-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F303K8-NUCLEO32/: main.c
ChibiOS/demos/STM32/RT-STM32F373-STM32373C_EVAL/: main.c
ChibiOS/demos/STM32/RT-STM32F401RE-NUCLEO/: main.c
ChibiOS/demos/STM32/RT-STM32F407-DISCOVERY-G++/: main.cpp
ChibiOS/demos/STM32/RT-STM32F407-DISCOVERY-MEMS/: main.c
ChibiOS/demos/STM32/RT-STM32F407-OLIMEX_E407-LWIP-FATFS-USB/: main.c
ChibiOS/demos/STM32/RT-STM32F429-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F746G-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32F746G-DISCOVERY-LWIP-FATFS-USB/: main.c
ChibiOS/demos/STM32/RT-STM32L152-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32L476-DISCOVERY/: main.c
ChibiOS/demos/STM32/RT-STM32L476RG-NUCLEO/: main.c
ChibiOS/demos/various/RT-Win32-Simulator/: main.c
ChibiOS/test/rt/testbuild/: main.c
ChibiOS/testhal/STM32/STM32F0xx/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F1xx/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F1xx/USB_CDC_F107/: main.c
ChibiOS/testhal/STM32/STM32F37x/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F3xx/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F3xx/USB_CDC_IAD/: main.c
ChibiOS/testhal/STM32/STM32F4xx/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F4xx/USB_CDC_IAD/: main.c
ChibiOS/testhal/STM32/STM32F7xx/USB_CDC/: main.c
ChibiOS/testhal/STM32/STM32F7xx/USB_RAW/: main.c
board/: board.c  board.h
src/: lib.rs
stm32-cmake/stm32-chibios-template/chibios-nil-f4-template/: main.c
stm32-cmake/stm32-chibios-template/chibios-rt-f4-template/: main.c
work/: test.cpp  test.hpp
